# Dex

./: .gitignore  .purser.toml  AGENTS.md  README.md  RESUME_HERE.md  VALIDATION_AUDIT.md  main.py  pyproject.toml
.beads/: metadata.json
.pi/: settings.json
.pi/skills/dex/: SKILL.md
.pi/skills/dex/references/: cli-tools.md
.pi/skills/dex/scripts/: profile.sh  query.sh  record_note.sh
docs/: architecture.md  fastmcp-mcp-apps-research.md  field-notes-design.md  privacy-boundaries.md  tooling-research.md
examples/: titanic_analysis.py
specs/: dex-data-analysts-field-companion.md
src/dex/: __init__.py  __main__.py  duckdb_runtime.py  field_notes.py  mcp_app.py
tests/: test_duckdb_runtime.py  test_examples.py  test_field_notes.py  test_mcp_app.py  test_smoke.py
