[project]
name = "dex"
version = "0.1.0"
description = "Pi-native data analyst field companion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "pytz>=2026.1.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dex", "examples"]

[dependency-groups]
dev = [
    "fastmcp>=3.2.4",
    "matplotlib>=3.10.9",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
